# cirtesub_description

./: CMakeLists.txt  README.md  cirtesub.urdf  package.xml
config/: ros2_control_params.yaml  ros2_control_params_dual_alpha.yaml  ros2_control_params_single_alpha.yaml
launch/: robot_description.launch.py
urdf/: cirtesub.urdf  cirtesub.urdf.xacro  cirtesub_dual_alpha.urdf.xacro
